Form mid -ie to-evoogd

--- a/Tanzania.mw
+++ b/Tanzania.mw
@@ -27,7 +27,7 @@ umskrieving2=
 }}
 
 
-'''Tanzania''', officieel de '''Vereynigde Republik Tanzania''', is een land an de oustküste van [[Afrika]]. Et grenset an [[Uganda]] in et noorden, [[Kenia]] in et noordousten, de [[Komoren]] en den [[Indisken Oceaan]] up et ousten, [[Mozambik]] en [[Malawi]] in et süden, [[Zambia]] in et süüdwesten en [[Rwanda]], [[Burundi]] en de [[Demokratiske Republik van de Kongo]] up et westen. Den höygsten barg van Afrika, de [[Kilimanjaro (barg)|Kilimanjaro]], ligt in noordoustelik Tanzania. De höyvdstad is [[Dodoma]].
+'''Tanzania''' of '''Tanzanie''', officieel de '''Vereynigde Republik Tanzania (of: Tanzanie)''', is een land an de oustküste van [[Afrika]]. Et grenset an [[Uganda]] in et noorden, [[Kenia]] in et noordousten, de [[Komoren]] en den [[Indisken Oceaan]] up et ousten, [[Mozambik]] en [[Malawi]] in et süden, [[Zambia]] in et süüdwesten en [[Rwanda]], [[Burundi]] en de [[Demokratiske Republik van de Kongo]] up et westen. Den höygsten barg van Afrika, de [[Kilimanjaro (barg)|Kilimanjaro]], ligt in noordoustelik Tanzania. De höyvdstad is [[Dodoma]].
 
 Vöäle belangryke [[mense|menskachtige]] [[fossil]]en sint in Tanzania vünden, so as uut et [[Plioceen]]-tydpärk, so een ses miljoon jår weaderümme. De undersoorte [[Australopithecus]] deade 4 töt 2 miljoon jåren weaderümme oaver heyl Afrika rundswerven. De oldste menskachtige oaverblyvsels sint evünden by den [[Olduvaiklouv]]. Do as 1,8 miljoon jår eleaden [[Homo erectus]] upstünd, verspreidden sik de menske sik oaver et heyle vasteland, en later ouk når [[Australie]], under de soorte ''[[Homo sapiens]]''. Disse soorte nöäm ouk Afrika heylemål oaver en roiden de öldere undersoorten uut. Eyne van de öldste volker van de wearld, de [[Hadza (volk)|Hadza]], likt uut Tanzania te stammen. See hebbet ne mundelike verhalentradity wårin vöärolden nöymd wordet. Disse vöärolden warren lange van lyf en gebröäken as eyrsten vüür en medicynen. Se woanden in grotten, net as ''Homo erectus'' en ''[[Homo heidelbergensis]]'' dee as ouk in disse streake woanden.
 
