*Empty MediaWiki Message*

--- a/Nedersaksische_warkwoordsvörms.mw
+++ b/Nedersaksische_warkwoordsvörms.mw
@@ -42,7 +42,7 @@ Ie wordt verzöcht um t understaonde schema an te holden. Ie kunt underan t sche
 | Hi
 | Hie
 | Hi'j
-| Hi'j, hee 
+| Hi'j, hee, hij 
 | Hee
 | Hee
 | Hij, hie, hee*
@@ -64,7 +64,7 @@ Ie wordt verzöcht um t understaonde schema an te holden. Ie kunt underan t sche
 | Ie 
 | Ie 
 | Jim 
-| I'j, i'jlu, (jullie)
+| I'j, i'jlu, ielu, jullie
 | Iej, iejleu
 | I-j
 | Julen, julie**
@@ -75,7 +75,7 @@ Ie wordt verzöcht um t understaonde schema an te holden. Ie kunt underan t sche
 | Zi 
 | Zie 
 | Zi'j 
-| Zi'j, zie
+| Zi'j, zee, zie
 | Zee, zeeleu
 | Zee 
 | Zee, zulie
