--- a/Nedersaksische_warkwoordsvörms.mw
+++ b/Nedersaksische_warkwoordsvörms.mw
@@ -456,7 +456,7 @@ Ie wordt verzöcht um t understaonde schema an te holden. Ie kunt underan t sche
 | Heb west
 | 
 | 
-| Hebt ewes(t)
+| Heb ewes(t)
 | Hebt (e)wes(t)
 | 
 | 
@@ -1403,10 +1403,10 @@ Tegenwoordige tied
 |-
 | Heb gedurfd
 | Heb duurfd
-| Heb dörfd
+| Heb dörft
 | 
 | 
-| 
+| hebt edörft
 | hebt (e)dorft/dorvet
 | 
 | 
