[[:Kategorie:Fluxus]] weg-ehaald; [[:Kategorie:Bieldend keunstenaor]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Robin_Page.mw
+++ b/Robin_Page.mw
@@ -5,4 +5,4 @@ Page roakte bekend as ain van de veurmannen van konstbeweegen [[Fluxus]] en waar
 Tiedens zien laiven exposeerde Page veurnoamelk in West-Europa. Doar trad e t maiste op. 
 Waarkens van Page moaken dail oet van de verzoameln van onder andere de [[Kunsthalle Bremen]], [[Museum Abteiberg]]<ref>[https://www.kulturstiftung.de/im-fluxus-luxus/ Erwerbungsförderung Im Fluxus-Luxus.] (ophoald op 19 jan 2020)</ref>, de [[Staatsgalerie Stuttgart]]<ref>[https://www.staatsgalerie.de/en/exhibitions/review/to-the-museum-of-modern-dreams-artistic-concepts-of-the-1960s-to-the-1980s.html ''To the Museum of Modern Dreams. Artistic Concepts of the 1960s to the 1980s.'' Op: www.staatsgalerie.de] (ophoald op 3 jan 2020) </ref> en de [[Austrian Ludwig Foundation for Art and Science]].
 
-[[Categorie:Fluxus]]
+[[Kategorie:Bieldend keunstenaor]]
