*Empty MediaWiki Message*

--- a/Reiderlaand_(streek).mw
+++ b/Reiderlaand_(streek).mw
@@ -1,6 +1,5 @@
-[[Ofbeelding:Lokoatsie Reiderlaand1.JPG|right|thumb|Lokoatsie van t Reiderlaand]]
-[[Ofbeelding:Lokoatsie Reiderlaand2.JPG|right|thumb|Reiderlaand in t keunenkriek Hollaand]]
-[[Ofbeelding:Reiderland.jpg|250px|right|thumb|t Reiderlaand veur de overstromens ''([[Dollart]] rekde hier tot Winschoot tou)'']]
+[[Ofbeelding:Reiderland kaart.png|right|thumb|Lokoatsie van t Reiderlaand (rood) over noudoagse koart]]
+
 t '''Reiderlaand''' ([[Duuts]]: Rheiderland) is n laandstreek in t grènzgebied van [[Nederlaand]] en [[Duutslaand]], onderdail van de Nederlaandse provìnzie [[Grunnen (provìnzie)|Grunnen]] en t Duutse distrikt [[Leer (Oostfraislaand)|Leer]] in [[Oostfraislaand]].
 
 t Reiderlaand omvat aan Nederlaandse ziede de lieknoamege gemainte [[Reiderlaand (gemainte)|Reiderlaand]], t noordelke dail van de gemainte [[Wedde-Bennewold]], t oostelke dail van de gemainte [[Scheemde]] en de gemainte [[Winschoot]]. Historisch heurt t Nederlaandse dail van Reiderlaand tegenswoordeg bie t Oldambt.
