--- a/Koelkaste.mw
+++ b/Koelkaste.mw
@@ -5,7 +5,9 @@ De koelkaste wonnen soms oek wel een ''ieskaste'' eneumd, dit is umdat 't vrogge
 
 == Nedersaksisch ==
 * [[Grunnegs]]: ''koulkaast(e)''
+* [[Drèents]]: ''koelka(a)st(e)''
 * [[Veluws]]: ''koelkast(e)'' of ''ieskast(e)''
+* [[Sallaands]]: ''koelkaste''
 * [[Stellingwarfs]]: ''koelkaaste''
 * [[Urkers]]: ''koelkast''
 
