Is dit degelk Westerwolds of Veenkeloniaols?

--- a/Robin_Page.mw
+++ b/Robin_Page.mw
@@ -1,6 +1,6 @@
 '''Robin Frederick Page''' ([[Londen]], [[2 november]] [[1932]] – [[Canada]], [[12 mei]] [[2015]])<ref name="Guard">[https://www.theguardian.com/artanddesign/2015/jun/03/robin-page Robin Page obituary, The Guardian (London, England). 3 juni, 2015]</ref> waar ain Brits-Canadees konstschilder en baildhaauwer. As perfesser waar 'e verbonden aan verschaidene Duutse academies veur de konsten.
 
-Page roakte bekend as ain van de veurmannen van konstbeweegen [[Fluxus]] en waar oprichter van kunstbeweegen [[Jape Art]]. Hai waarkte onder zien aigen noam, moar ook under 't [[pseudoniem]] '''Bluebeard''' (''Blaauwboard''). As konstenoar beschikte Page over veul talenten: hai was onder aandern [[cartoon]]ist, muzikaant, konstschilder, staindrokker, baildhaauwer en podiumkonstenoar. Zien waark wordt vailal kenmerkend deur [[absurdisme]] en [[satire]], woarbie mitnoame de konstwaereld (en nait in leste stee de konstenoar zullen) op hak nomen wordt. Ondaanks t grote vakmanschap van zien waark en dailnoame aan [[Documenta]] -de wichtigste tentoonstellen van haidendoagse baildende konst op eerd- kreeg Page tiedens zijn laiven echter nooit volledige erkennen veur zien waark. Woar Page wel erkennen veur kreeg waar zien invloud op meziek, hai wordt zain as groundlegger van 't''guitar smashing'' in de popmeziek.
+Page roakte bekend as ain van de veurmannen van konstbeweegen [[Fluxus]] en waar oprichter van kunstbeweegen [[Jape Art]]. Hai waarkte onder zien aigen noam, moar ook under 't [[pseudoniem]] '''Bluebeard''' (''Blaauwboard''). As konstenoar beschikte Page over veul talenten: hai was onder aandern [[cartoon]]ist, muzikaant, konstschilder, staindrokker, baildhaauwer en podiumkonstenoar. Zien waark wordt vailal kenmerkt deur [[absurdisme]] en [[satire]], woarbie mitnoame de konstwaereld (en nait in leste stee de konstenoar zullen) op hak nomen wordt. Ondaanks t grote vakmanschap van zien waark en dailnoame aan [[Documenta]] -de wichtigste tentoonstellen van haidendoagse baildende konst op eerd- kreeg Page tiedens zijn laiven anders nooit volledige erkennen veur zien waark. Woar Page wel erkennen veur kreeg waar zien invloud op meziek. Hai wordt zain as groundlegger van 't ''guitar smashing'' in de popmeziek.
 
 Tiedens zien laiven exposeerde Page veurnoamelk in West-Europa. Doar trad e t maiste op. 
 Waarkens van Page moaken dail oet van de verzoameln van onder andere de [[Kunsthalle Bremen]], [[Museum Abteiberg]]<ref>[https://www.kulturstiftung.de/im-fluxus-luxus/ Erwerbungsförderung Im Fluxus-Luxus.] (ophoald op 19 jan 2020)</ref>, de [[Staatsgalerie Stuttgart]]<ref>[https://www.staatsgalerie.de/en/exhibitions/review/to-the-museum-of-modern-dreams-artistic-concepts-of-the-1960s-to-the-1980s.html ''To the Museum of Modern Dreams. Artistic Concepts of the 1960s to the 1980s.'' Op: www.staatsgalerie.de] (ophoald op 3 jan 2020) </ref> en de [[Austrian Ludwig Foundation for Art and Science]].
