--- a/Kezestölpe.mw
+++ b/Kezestölpe.mw
@@ -6,7 +6,9 @@ Een '''kezestölpe''' is een gebruuksveurwarp veur in de [[kökken|keuken]] en o
 Onder de stölpe dreugt de keze minder rap uut en kan dizzend op [[kamertemperatuur]] bewaord wörden. De keze wördt bescharmd tegen invloeden van butenof, zoas vliegen en schimmels. Ok kuj der de keze mit ofscheiden van de geuren van aandere levensmiddeln in de [[koelkaste]]. Wieder veurkomt de stölpe det oe de kamer naor keze giet roeken.
 
 ==Kenmarken==
-Kezestölpen hebt vake de deursnede van een [[bred (voat)|etensbörd]], of past daor aoverhenne, zodej de keze op 't börd kunt leggen en der de stölpe aoverhenne kunt plaatsen. Baovenop de stölpe zit een dikke knoppe, daor aj de stölpe mit kunt optillen en neerzetten. Mangs zit der an de baovenkaante van de stölpe wat gatties, zodet de keze kan aosemn. Bij de stölpe kan ok een eigen schale of rond holten börd heuren. An de raand van zo'n börd kan rondum een glieve zitten, waor dan de raand van de stölpe in past. 't Holten börd kuj in iene muite deur gebruken as sniedplaanke veur de keze.
+Kezestölpen hebt vake de deursnede van een [[bred (voat)|etensbörd]], of past daor aoverhenne, zodej de keze op 't börd kunt leggen en der de stölpe aoverhenne kunt plaatsen. Baovenop de stölpe zit een dikke knoppe, daor aj de stölpe mit kunt optillen en neerzetten. Mangs zit der an de baovenkaante van de stölpe wat gatties, zodet de keze kan aosemn.
+
+Bij de stölpe kan ok een eigen schale of rond holten börd heuren. An de raand van zo'n börd kan rondum een glieve zitten, waor dan de raand van de stölpe in past. 't Holten börd kuj in iene muite deur gebruken as sniedplaanke veur de keze.
 
 ==Benumingen en uutdrokkings==
 In verscheiden talen het 't dink, naor de vörm dervan, een 'kezeklokke': [[Duuts]] ''Käseglocke'', [[Deens]] ''osteklokke'', [[Fraans]] ''cloche à fromage'', [[Spaans]] ''campana de queso''. 't Woord in 't [[Esperanto]], ''fromaĝokloŝo'', is ok de titel van 't blad van de Esperantoveriening in [[Alkmaar]]. Sommige gebouwen wördt wegens de vörm informeel 'de kezestölpe' enuumd, zoas in [[Duutslaand]] 't geval is mit gebouwen in [[Berlien]], [[Dresden]] en 't keunstenersdörp [[Wörpswede]].
