--- a/Hermien_Haar.mw
+++ b/Hermien_Haar.mw
@@ -1,4 +1,4 @@
-'''Hermien Haar''' ([[Zuudwolde]], [[1952]]) is uutgeefster bi'j [[Het Drentse Boek]], sund 2007 onderdiel van 't [[Huus van de Taol]] in [[Beilen]], [[pervincie]] [[Drenthe]]. Zi'j is daor gaanks mit 't uutgeven van [[Drèents]]talige boeken en van [[Nederlaans]]talige boeken oaver Drèentse onderwarpen. In 2007 was ze mit [[Alja Kliers]], [[Abel Darwinkel]] en [[Jan Germs]] ien van de vier vaste mitwarkers van 't ni'j op-erichte Huus van de Taol, anfieterinstituut veur 't Drèents.
+'''Hermien Haar''' ([[Zuudwolde]], [[1952]]) is uutgeefster bi'j [[Het Drentse Boek]], sund 2007 onderdiel van 't [[Huus van de Taol]] in [[Beilen]], [[pervincie]] [[Drenthe]]. Zi'j is daor gaanks mit 't uutgeven van [[Drèents]]talige boeken en van [[Nederlaans]]talige boeken oaver Drèentse onderwarpen. In 2007 was ze mit [[Alja Kiers]], [[Abel Darwinkel]] en [[Jan Germs]] ien van de vier vaste mitwarkers van 't ni'j op-erichte Huus van de Taol, anfieterinstituut veur 't Drèents.
 
 ==Bronnen==
 * Jan Germs (samenstelling) (2005), ''De mooiste woorden van Drenthe'', Uitgeverij Noordboek
