--- a/Biseksualiteit.mw
+++ b/Biseksualiteit.mw
@@ -1,29 +1,29 @@
 [[Bestaand:Sexual scene on pompeian mural 2.jpg|thumb|Biseksualiteit]]
-[[Bestaand:The_bisexual_pride_flag_(3673713584).jpg|thumb|right|Vlagge dee vöär de biseskualiteit steyt.]]
-[[Bestaand:Japanesepederasty18thcentury.jpg|thumb|right|Ne Japanse afbeelding van twey männe en ne vrouwe dee [[seks]] hebbet.]]
-'''Biseksualiteit''' is ne ård [[seksuele gerichtheid]] wårby nen persoon beide når [[man (geslacht)|männe]] en [[vraauw|vrouwlüde]] kikt, emotioneel en/of seksueel. Et is med [[heteroseksualiteit|heteroseksualiteit]] en [[homoseksualiteit|homoseksualiteit]] eyne van de dree höyvdförme van seksuele vöärköär. Biseksualiteit is nich heylemål etsölvde as [[panseksualiteit|panseksualiteit]]. By panseksualiteit maakt et ja niks uut by wat vöär [[geslachtsidentiteit|geslachtsidentiteit]] eyne sik by reakent. By biseskualiteit is en persoon in et geheyl richt up männe en vrouwlüde alleane. Ouk lüde dee nich heylemål sou drök doot oaver öaren seksuelen ård künnet siksölv as biseksueel kenmarken. Lüde dee as heylemål niks vöölt by gin enkel geslacht sint [[aseksueel]].
+[[Bestaand:The_bisexual_pride_flag_(3673713584).jpg|thumb|right|Vlagge dee vöär de biseksualiteit steyt.]]
+[[Bestaand:Japanesepederasty18thcentury.jpg|thumb|right|Ne japanske afbealding van twey männe en ne vrouwe dee [[seks]] hebbet.]]
+'''Biseksualiteit''' is ne ård [[seksuele gerichtheid]] wårby nen persoon beide når [[man (geslacht)|männe]] en [[vraauw|vrouwlüde]] kikt, emotioneel en/of seksueel. Et is med [[heteroseksualiteit|heteroseksualiteit]] en [[homoseksualiteit|homoseksualiteit]] eyne van de dree höyvdförme van seksuele vöärköär. Biseksualiteit is nich heylemåle etsülvde as [[panseksualiteit|panseksualiteit]]. By panseksualiteit maakt et ja niks uut by wat vöär [[geslachtsidentiteit|geslachtsidentiteit]] eyne sik by reakent. By biseksualiteit is en persoon in et geheyl richted up männe en vrouwlüde alleyne. Ouk lüde dee nich heylemåle sou drük doot oaver öären seksuelen ård künnet siksülv as biseksueel kenmarken. Lüde dee as heylemåle niks vöölt by gin enkel geslacht sint [[aseksueel]].
 
-Biseksualiteit kümt vöär oaver de heyle wearld in verskillende kulturen, en ouk by deers kün y et antreffen. Et hevt der aait al weasd. De term ''biseksualiteit'' köm net as de termen ''heteroseksualiteit'' en ''homoseksualiteit'' pas in et 19. jårhunderd in engelsk-sprekkende landen in gebruuk, en pas argens halv in et 20. jårhunderd in [[Neaderland]].
+Biseksualiteit kümt vöär oaver de heyle wearld in verskillende kulturen, en ouk by deers kün y et antreffen. Et hevt der altyd al wesd. De term ''biseksualiteit'' köm net as de termen ''heteroseksualiteit'' en ''homoseksualiteit'' pas in et 19. jårhunderd in engelsk-sprekkende landen in gebruuk, en pas argens halv in et 20. jårhunderd in [[Neaderland]].
 
-== Umskryving ==
+== Ümskryving ==
 === Seksuele gerichtheid, identiteit, gedrag ===
-Biseksuelen künnet leevdesgevölens en seksuele gevölens hebben vöär beide geslachten, man en vrouwe. Lüde vallet düs nich enkel up männe of vrouwlüde; der is ouk noch en gebeed tüskenin. Dårbinnen sint verskillende gråden wårin eyne körter by homoseksualiteit of körter by heteroseksualiteit steyt. Wyder kan et ouk sou weasen dat eyne sik wal seksueel antrökken vöölt up et sölvde geslacht, mår syne identiteit toch up heteroseksueel höldt. Ouk künnet lüde homoseksuele ervåringen hebben, mår siksölv nich as homeseksueel of biseksueel seen. Ouk kan et sou weasen dat nen homoseksueel seks hevt med eyne van et andere geslacht mår siksölv nich as biseksueel süt.
-=== Meaningen oaver et bestån der van ===
-Net sou as andere "råre" seksualiteiten kan biseksualiteit diskrimineerd wörden, al kümt dat in [[Verienigde Staoten van Amerika|Amerika]] vaker vöär as in [[Neaderland]]. Der sint årdig wat lüde dee meynet dat et [[bifobie|verskynsel biseksualiteit nich besteyt]]. dat idee kümt van de gedachte dat lüde enkel mår op lüde van et andere geslacht [[verleevdheid|verleevd]] künnet worden, of dat der alleane heteroseksualiteit en homoseksualiteit besteyt, mår nich wat der tüskenin. Dee lüde meynet dat en term biseksualiteit gebruukt wörd döär biseksuelen as vöärwendsel üm homoseksualiteit te verbergen, döär heteroseksuelen dee seks med et sölvde geslacht uutproberen willet, of dat eyne alleane biseksueel is as den sik töt beide geslachten in deselvde måte antrökken vöölt.
+Biseksuelen künnet leevdesgevölens en seksuele gevölens hebben vöär beide geslachten, man en vrouwe. Lüde vallet düs nich enkel up männe of vrouwlüde; der is ouk noch en gebeed tüskenin. Dårbinnen sint verskillende gråden wårin eyne körter by homoseksualiteit of körter by heteroseksualiteit steyt. Wyder kan et ouk sou weasen dat eyne sik wal seksueel antrökken vöölt up etsülvde geslacht, maar syne identiteit toch up heteroseksueel höldt. Ouk künnet lüde homoseksuele ervaringen hebben, maar siksülv nich as homeseksueel of biseksueel seen. Ouk kan et sou weasen dat nen homoseksueel seks hevt med eyne van et andere geslacht maar siksülv nich as biseksueel süt.
+=== Meaningen oaver et bestån dervan ===
+Net sou as andere 'afwykende' seksualiteitsförme kan biseksualiteit diskrimineerd wörden, al kümt dat in [[Verienigde Staoten van Amerika|Amerika]] vaker vöär as in [[Neaderland]]. Der sint årdig wat lüde dee meynet dat et [[bifobie|verskynsel biseksualiteit nich besteyt]]. Dat idee kümt van de gedachte dat lüde enkel maar up lüde van et andere geslacht [[verleevdheid|verleevd]] künnet worden, of dat der alleyne heteroseksualiteit en homoseksualiteit besteyt, maar nich wat der tüskenin. Dee lüde meynet dat en term biseksualiteit gebruked wördt döär biseksuelen as vöärwendsel üm homoseksualiteit te verbargen, döär heteroseksuelen dee seks med etsülvde geslacht uutproberen willet, of dat eyne alleyne biseksueel is as den sik töt beide geslachten in deselvde måte antrökken vöölt.
 
-Oaver de tyd hebbet meyrdere weatenskappers de gedachte der achterhen dån dat eyne alleane biseskueel is as den sik antrökken vöölt töt  beide geslachten. See hebbet låtn seen dat biseksuåliteit ouk ne aparte gerichtheid is. Der was ouk en undersöök dat seade dat y alleanig biseksueel bint as y u romantisk of seksueel antrökken vöölt når beide et andere as et eygene geslacht, mår den uutkümst is later weader intrökken.
+Oaver de tyd hebbet meyrdere weatenskappers de gedachte der achterhen dån dat eyne alleyne biseksueel is as den sik antrökken vöölt töt beide geslachten. See hebbet låten seen dat biseksualiteit ouk ne aparte gerichtheid is. Der was ouk en undersöök dat seade dat y alleynig biseksueel bint as y u romantisk of seksueel antrökken vöölt når beide et andere as et eygene geslacht, maar den uutkümst is later weader intrökken.
 
-In 1995 bleak uut en undersöök dat de meyrderheid van de lüde biseksueel solde weasen "as et algemeyne beald nich förmd worden solde döär underdrükking, gelöyv, afkeyr, untkenning, loiheid, verleagenheid, te weinig kansen, te weinig verbealding, of en leaven wårin as y alleane mår seksuele ervåring med eyne persoon of eyn geslacht hebbet."
+In 1995 bleak uut en undersöök dat de meyrderheid van de lüde biseksueel solde weasen "as et algemeyne beald nich förmd worden solde döär underdrükking, gelöyv, afkeyr, untkenning, loiheid, verleagenheid, te weinig kansen, te weinig verbealding, of en leaven wårin as y alleyne maar seksuele ervaring med eyne persoon of eyn geslacht hebbet."
 
 === Kinseys skåle ===
-[[Kinseys skåle]] probeert seksuele interesses en verleaden üm te setten in en cyfer dat angevt in wat vöär seksuele richting eyne sik bevindet. Et vangt an med 0, wat steyt vöär alleane heteroseksueel, töt 6, wat steyt vöär alleane homoseksueel.
+[[Kinseys skåle]] probeert seksuele interesses en verleaden üm te setten in en cyfer dat angevt in wat vöär seksuele richting eyne sik bevindet. Et vangt an med 0, wat steyt vöär alleyne heteroseksueel, töt 6, wat steyt vöär alleyne homoseksueel.
 
 == Vöärkummen ==
-Eyn undersöök van et Landelik Netwark Biseksualiteit (2007) by 50.000 lüde hevt låten seen dat der verskillen sint tüsken biseksueel gedrag en biseksuele identiteit. Van de heteroseksuele männe seade 5,5% an biseksueel gedrag te doon, van de homoseksuele männe was dat 7,5%. By de vrouwlüde was dat van de heteroseksuelen 5,2%, en van de homoseksuelen 13,5%. Mår ümdat Neaderland völle meyr inwoaners hevt as dat, is te seggen dat et best möägelik is dat der völle meyr biseksuelen sint, vöäral by jungeren dee öäre identiteit noch kennenleyren müt.
-== Weatenskappelike undersöken, teorien en reaktys uut de ümgeaving ==
-Weatenskappers  hebbet verskillende ideen en teorien oaver hoo as et kümt dat ymand biseksueel is. Völle sint et der oaver eyns dat biseksuelen et al weatet as see behöyrlik jung sint. Ouk al kan et good weasen dat see et up dat ougenblik nog nich herkennet as biseksualiteit. Mangs kan et sou weasen dat eyne sik al jårenlang biseksueel gedrägt, mår et pas nå al dee jåren herkent of togeavt.
+En undersöök van et Landelik Netwark Biseksualiteit (2007) by 50.000 lüde hevt låten seen dat der verskillen sint tüsken biseksueel gedrag en biseksuele identiteit. Van de heteroseksuele männe seade 5,5% an biseksueel gedrag te doon, van de homoseksuele männe was dat 7,5%. By de vrouwlüde was dat van de heteroseksuelen 5,2%, en van de homoseksuelen 13,5%. Maar ümdat Neaderland völle meyr inwoaners hevt as dat, is te seggen dat et best möägelik is dat der völle meyr biseksuelen sint, vöäral by jungeren dee öäre identiteit noch kennenleyren müt.
+== Weatenskappelike undersöken, teoryen en reaktys uut de ümgeaving ==
+Weatenskappers  hebbet verskillende ideen en teoryen oaver ho as et kümt dat ymand biseksueel is. Völle sint et der oaver eyns dat biseksuelen et al weatet as see behöyrlik jung sint. Ouk al kan et good weasen dat see et up dat ougenblik noch nich herkennet as biseksualiteit. Mangs kan et sou weasen dat eyne sik al jårenlang biseksueel gedrägt, maar et pas nå al dee jåren herkent of togevt.
 
 === Sociale faktoren ===
-Krafft-Ebing was den eyrsten wat seade dat biseksualiteit de eyrste natuurlike richting van seksualiteit is, wat [[Sigmund Freud|Freud]] ouk al bewäärden. See vünden dat lüde eyrst biseksueel sint, as ne ård neutrale posity. Pas later, under invlood van sociale faktoren, olders, family, vreanden of politike beweagreadenen keset se der vöär üm heteroseksueel of homoseksueel te weasen.
+Krafft-Ebing was den eyrsten wat seade dat biseksualiteit de eyrste natuurlike richting van seksualiteit is, wat [[Sigmund Freud|Freud]] ouk al bewäärden. See vünden dat lüde eyrst biseksueel sint, as ne ård neutrale posity. Pas later, under invlood van sociale faktoren, olders, family, vrenden of politike beweagreadenen keset se dervöär üm heteroseksueel of homoseksueel te weasen.
 [[Kategorie:Twents artikel]]
 [[Kategorie:Seksuele gerichtheid]]
