anpassing dialektkategory + skryvwysekategory to-evoogd

--- a/Biseksualiteit.mw
+++ b/Biseksualiteit.mw
@@ -25,5 +25,7 @@ Weatenskappers  hebbet verskillende ideen en teoryen oaver ho as et kümt dat ym
 
 === Sociale faktoren ===
 Krafft-Ebing was den eyrsten wat seade dat biseksualiteit de eyrste natuurlike richting van seksualiteit is, wat [[Sigmund Freud|Freud]] ouk al bewäärden. See vünden dat lüde eyrst biseksueel sint, as ne ård neutrale posity. Pas later, under invlood van sociale faktoren, olders, family, vrenden of politike beweagreadenen keset se dervöär üm heteroseksueel of homoseksueel te weasen.
-[[Kategorie:Twents artikel]]
+
+{{Dialekt|twd||Nysassiske Skryvwyse}}
+
 [[Kategorie:Seksuele gerichtheid]]
