*Empty MediaWiki Message*

--- a/Homoseksualiteit.mw
+++ b/Homoseksualiteit.mw
@@ -97,4 +97,4 @@ Behalve in Iran staot op homoseksualiteit de doodstraf in [[Jemen]], [[Mauritani
 
 {{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
-[[Kategorie:Seksuele erichtheaid]]
+[[Kategorie:Seksuele gerichtheid]]
