*Empty MediaWiki Message*

--- a/Brexit.mw
+++ b/Brexit.mw
@@ -1,28 +1,28 @@
-[[Bestaand:EU-United Kingdom.svg|thumb|Ligging van t Verienigd Keuninkriek binnen de Europese Unie]]
-'''Brexit''' is n saemenstelling tussen 'Britain' en 'exit' (letterlik: ''Britse uuttreding''). De term het betrekking op t uuttreden van t [[Verienigd Keuninkriek]] uut de [[Europese Unie]] (EU) in 2016. Op de zelde maniere ontston t woord 'grexit', dat betrekking het op t (uutbleven) uuttreden van [[Griekenlaand]] uut de [[eurozaone]]. 
+[[Bestaand:EU-United Kingdom.svg|thumb|Ligging van et Verienigd Keuninkriek binnen de Europese Unie]]
+'''Brexit''' is een saemenstelling tussen 'Britain' en 'exit' (letterlik: ''Britse uuttreding''). De term het betrekking op et uuttreden van et [[Verienigd Keuninkriek]] uut de [[Europese Unie]] (EU) in 2016. Op de zelde maniere ontston et woord 'grexit', dat betrekking het op et (uutbleven) uuttreden van [[Griekenlaand]] uut de [[eurozone]]. 
 
-Op 23 juni 2016 wordde der n [[volksraodpleging]] organiseerd deur de Britse regering over t wel of niet uut de EU treden van t Verienigd Keuninkriek. t Brexit-kamp wun.
+Op 23 juni 2016 wordde der een [[volksraodpleging]] organiseerd deur de Britse regering over et wel of niet uut de EU treden van et Verienigd Keuninkriek. Et Brexit-kamp wun, waordeur op 31 jannewaori 2020 et Verienigd Keuninkriek uuttrad uut de EU.
 
 == Aachtergrond==
-t Britse EU-lidmaotskop het lange tied n kontroversieel onderwarp west in t Verienigd Keuninkriek. Euroskeptisi die van mening weren dat t Verienigd Keuninkriek beter of zol wezen buten de EU, wollen dat t laand uuttrad.
+Et Britse EU-lidmaotskop het lange tied een kontroversieel onderwarp west in et Verienigd Keuninkriek. Euroskeptisi die van mening weren dat et Verienigd Keuninkriek beter of zol wezen buten de EU, wollen dat et laand uuttrad.
 
-n Eerdere volksraodpleging over t Britse lidmaotskop van n verienigd Europa vun plaetse in 1975. n Meerderhied van t Britse volk steunde de vortzetting van t lidmaotskop van t Verienigd Keuninkriek van de [[Europese Ekonomiese Gemienskop]] (EEG), n veurganger van de EU.<ref>[http://www.historyandpolicy.org/policy-papers/papers/the-case-for-brexit-lessons-from-1960s-and-1970s The case for Brexit: lessons from the 1960s and 1970s], Adrian Williamson, ''History and Policy'', 2015</ref>
+Een eerdere volksraodpleging over et Britse lidmaotskop van een verienigd Europa vun plaetse in 1975. Een meerderhied van et Britse volk steunde de vortzetting van et lidmaotskop van et Verienigd Keuninkriek van de [[Europese Ekonomische Gemienskop]] (EEG), een veurganger van de EU.<ref>[http://www.historyandpolicy.org/policy-papers/papers/the-case-for-brexit-lessons-from-1960s-and-1970s The case for Brexit: lessons from the 1960s and 1970s], Adrian Williamson, ''History and Policy'', 2015</ref>
 
 == Uutslag van de volksraodpleging ==
-In de ochtend nao de volksraodpleging bleek t brexit-kamp wunnen te hebben mit n meerderhied van 51,9 %.<ref>[http://nos.nl/artikel/2113163-alle-stemmen-zijn-geteld-52-procent-stemt-voor-brexit.html Alle stemmen bin teld: 52 persent stemt veur brexit]</ref> Opvalend bi'j disse uutslag is t verskil tussen [[Engelaand (regio)|Engelaand]] en [[Kumrië]], waor telkens n meerderhied van ongeveer 53% veur de Brexit keus en [[Schotlaand|Skotlaand]] en [[Noord-Ierlaand]] waor t "remain"-kamp n dudelike meerderhied behaelde (in Skotlaand zels in alle kiesdistrikten). De opkomst was 72,2%.
+In de ochtend nao de volksraodpleging bleek et Brexit-kamp wunnen te hebben mit een meerderhied van 51,9 %.<ref>[http://nos.nl/artikel/2113163-alle-stemmen-zijn-geteld-52-procent-stemt-voor-brexit.html Alle stemmen bin teld: 52 persent stemt veur brexit]</ref> Opvalend bi'j disse uutslag is et verskil tussen [[Engelaand (regio)|Engelaand]] en [[Kumrië]], waor telkens een meerderhied van ongeveer 53% veur de Brexit keus en [[Schotlaand|Skotlaand]] en [[Noord-Ierlaand]] waor et "remain"-kamp een dudelike meerderhied behaelde (in Skotlaand zels in alle kiesdistrikten). De opkomst was 72,2%.
 
-Deurdat de premier [[David Cameron]] veur de <nowiki>''remain''</nowiki>-groep kampanje voerd het is zien posisie wankel worden en het hi'j de ochtend naodat de uutslag definitief bekend maekt was, zegd dat hi'j zal oftreden omdat hi'j himzels niet meer in staot vient om t laand nog te leiden.<ref>[http://www.nu.nl/brexit/4282662/premier-cameron-kondigt-aftreden-uitslag-eu-referendum.html ''Premier Cameron kondigt oftreden an nao uutslag EU-volksraodpleging''], nu.nl <small>2016-06-25</small></ref>
+Deurdat de doemaolige premier [[David Cameron]] veur de <nowiki>''remain''</nowiki>-groep kampanje voerd het is zien posisie wankel worden en het hi'j de ochtend naodat de uutslag definitief bekend maekt was, zegd dat hi'j zal oftreden omdat hi'j himzels niet meer in staot vient om et laand nog te leiden.<ref>[http://www.nu.nl/brexit/4282662/premier-cameron-kondigt-aftreden-uitslag-eu-referendum.html ''Premier Cameron kondigt oftreden an nao uutslag EU-volksraodpleging''], nu.nl <small>2016-06-25</small></ref>
 
 == Skotlaand ==
-Now t Verienigd Keuninkriek de EU liekt te gaon verlaoten, wil [[Schotlaand|Skotlaand]] n volksraodpleging hoolden om onofhaankelik te worden van t Verienigd Keuninkriek. In Skotlaand het 62% stemd om in de EU te blieven. Disse uutslag zol t neffens de Skotse regering rechtveerdigen om weer n onofhaankelikhiedsrifferendum te hoolden. In 2014 het Skotlaand al n onofhaankelikhiedsrifferendum hoolden mit as uutslag 55% tegen uuttreding uut t Verienigd Keuninkriek.<ref>[http://www.nu.nl/brexit/4283445/schotland-bereidt-wetgeving-tweede-onafhankelijkheidsreferendum.html ''Skotlaand bereidt wetgeving veur twiede onofhaankelikhiedsrifferendum veur ''], nu.nl <small>2016-06-25</small></ref>
+Now et Verienigd Keuninkriek de EU hef verlaoten, wil [[Schotlaand|Skotlaand]] een volksraodpleging hoolden om onofhaankelik te worden van et Verienigd Keuninkriek. In Skotlaand het 62% stemd om in de EU te blieven. Disse uutslag zol et neffens de Skotse regering rechtveerdigen om weer een onofhaankelikhiedsrifferendum te hoolden. In 2014 het Skotlaand al een onofhaankelikhiedsrifferendum hoolden mit as uutslag 55% tegen uuttreding uut et Verienigd Keuninkriek.<ref>[http://www.nu.nl/brexit/4283445/schotland-bereidt-wetgeving-tweede-onafhankelijkheidsreferendum.html ''Skotlaand bereidt wetgeving veur twiede onofhaankelikhiedsrifferendum veur ''], nu.nl <small>2016-06-25</small></ref>
 
 == Meugelik twiede volksraodpleging ==
-Vortdrekt nao de uutslag van de volksraodpleging is der n petisie op internet zet over n twiede volksraodpleging. Twie daegen naodat de petisie op internet zet was, weren der al meer as aanderhalf miljoen haandtekenings verzaemeld, roem zat om de petisie deur te laoten gaon. De organisatoren van de volksraodpleging vienen dat de uutslag van de twiede volksraodpleging pas mitteld worden mag as n meerderhied van temeensen 60% veurstaander van vertrek is en mit n opkomstpersentazie van temeensen 75%.<ref>[http://www.nu.nl/brexit/4283419/ruim-miljoen-britten-tekenen-petitie-tweede-referendum.html ''Twie miljoen Britten tekenen petisie veur twiede volksraodpleging''], nu.nl <small>2016-06-25</small></ref>
+Vortdrekt nao de uutslag van de volksraodpleging is der een petisie op internet zet over een twiede volksraodpleging. Twie daegen naodat de petisie op internet zet was, weren der al meer as aanderhalf miljoen haandtekenings verzaemeld, roem zat om de petisie deur te laoten gaon. De organisatoren van de volksraodpleging vienen dat de uutslag van de twiede volksraodpleging pas mitteld worden mag as een meerderhied van temeensen 60% veurstaander van vertrek is en mit een opkomstpersentazie van temeensen 75%.<ref>[http://www.nu.nl/brexit/4283419/ruim-miljoen-britten-tekenen-petitie-tweede-referendum.html ''Twie miljoen Britten tekenen petisie veur twiede volksraodpleging''], nu.nl <small>2016-06-25</small></ref>
 
 == Rifferensies ==
 <references/>
 
-{{Dialekt|stl|Algemiene Nedersaksiese Skriefwieze}}
+{{Dialekt|stl|Algemiene Nedersaksische Skriefwieze}}
 
 [[Kategorie:Europese Unie]]
 [[Kategorie:Verienigd Keuninkriek]]
