*Empty MediaWiki Message*

--- a/Brexit.mw
+++ b/Brexit.mw
@@ -22,7 +22,7 @@ Vortdrekt nao de uutslag van de volksraodpleging is der een petisie op internet 
 == Rifferensies ==
 <references/>
 
-{{Dialekt|stl||Algemiene Nedersaksische Skriefwieze}}
+{{Dialekt|stl||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Europese Unie]]
 [[Kategorie:Verienigd Keuninkriek]]
