*Empty MediaWiki Message*

--- a/Nysassiske_Skryvwyse.mw
+++ b/Nysassiske_Skryvwyse.mw
@@ -160,7 +160,7 @@ By de konsonanten wyset sik alleyn minimale vorskealen up dat foneemlevel twüsk
 |-
 | ey || ē<sub>2a</sub> || s'''ai'''p(j)ōn <br>r'''ai'''pan~r'''ai'''paz || || s'''ey'''pe, s'''ae'''pe <br>r'''ey'''p, r'''ae'''p || S'''ee'''p <br>R'''ee'''p || z'''ai'''p(e) <br> <br> || S'''e'''pe <br>R'''ee'''p || z'''ee'''p, z'''e'''pe<br> r'''ee'''p || zeep <br>reep || Seife <br>Reif 
 |-
-| ey / ee{{Info|By splitsing ē2: ee}} || ē<sub>2b</sub> || st'''ai'''naz <br>ƀ'''ai'''nan || st'''ē'''n <br>b'''ē'''n || st'''ey'''n, st'''ee'''n <br>b'''ey'''n, b'''ee'''n || St'''ee'''n <br>B'''ee'''n || st'''ai'''n <br>b'''ai'''n || St'''e'''ne <br>B'''ee'''n || st'''ee'''n <br>b'''ee'''n || steen <br>been || Stein <br>Bein 
+| ey / ee{{Info|By splitsing ē2: ee}} || ē<sub>2b</sub> || st'''ai'''naz <br>ƀ'''ai'''nan || st'''ē'''n <br>b'''ē'''n || st'''ey'''n <br>b'''ey'''n || St'''ee'''n <br>B'''ee'''n || st'''ai'''n <br>b'''ai'''n || St'''e'''ne <br>B'''ee'''n || st'''ee'''n <br>b'''ee'''n || steen <br>been || Stein <br>Bein 
 |-
 | ei || ē<sub>3</sub> || <br>l'''ai'''đjanan <br>ʒ'''ai'''laz || <br>l'''ē'''dian <br>g'''ē'''l || b'''ei'''de <br>l'''ei'''den <br>g'''ei'''l || b'''ei'''de <br>l'''ei'''den <br>g'''ei'''l || b'''aai'''de <br>l'''aai'''den <br>g'''aai'''l || b'''ai'''de <br>l'''ai'''en <br>g'''ai'''l || b'''ei'''de <br>l'''ei'''dn <br> g'''ei'''l || beide <br>leiden <br>geil || beide <br>leiten <br>geil  
 |- 
@@ -194,7 +194,7 @@ Upspletten van ē<sub>2</sub> is nich in alle dialekten passeerd. Vöäral up de
 ======Sunder splitsing van ē<sub>2</sub>======
 ē<sub>1</sub>: ''skaere'', ''kaese'', ''laeg''<br>
 ē<sub>2a</sub>: ''s'''ey'''pe'', ''r'''ey'''p''<br>
-ē<sub>2b</sub>: ''st'''ey'''n'', ''b'''ey'''n''<br>
+ē<sub>2b</sub>: ''steyn'', ''beyn''<br>
 ē<sub>3</sub>: ''beide'', ''leiden'', ''geil''<br>
 ē<sub>4</sub>: ''leev'', ''vlegen'', ''geten''<br>
 | valign="top" |
@@ -202,7 +202,7 @@ Upspletten van ē<sub>2</sub> is nich in alle dialekten passeerd. Vöäral up de
 ======By splitsing van ē<sub>2</sub>======
 ē<sub>1</sub>: ''skaere'', ''kaese'', ''laeg''<br>
 ē<sub>2a</sub>: ''s'''ae'''pe'', ''r'''ae'''p''<br> 
-ē<sub>2b</sub>: ''st'''ee'''n'', ''b'''ee'''n''<br>
+ē<sub>2b</sub>: ''steyn'', ''beyn''<br>
 ē<sub>3</sub>: ''beide'', ''leiden'', ''geil''<br>
 ē<sub>4</sub>: ''leev'', ''vlegen'', ''geten''
 |}
