[[:Kategorie:Germaanse Mythologie]] weg-ehaald; [[:Kategorie:Germaanse mythologie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Loki.mw
+++ b/Loki.mw
@@ -10,4 +10,4 @@ Wo as Loki sik töt de andere guden vorholdet, hangt van et verhaal af: mangs he
 Loki kümt vöär in de dicht-edda, et bookwark wat in de 13. eywe upstelled wör uut öldere traditionele brunnen en vortelkünst. Ouk wördt hee nöömd in de verhaaledda en de [[Heimskringla]] den as in de 13. eywe döär den domåligen geskeedkünnigen [[Snorri Sturluson]] wör daleskreaven. Hee steyt ouk tüsken de [[Noorske Runedichtsels]], wördt besüngen in de dichtsels van de [[Skald]]s en hevt ne rulle in skandinaviske volksverhalen. Et kan good Loki weasen den as steyr up de runesteynder van [[Snaptunsteyn|Snaptun]], [[Kirkby Stephen-steyn|Kirkby Stephen]] en et [[Krüüs van Gosforth]]. Volgens de meyste geleyrden is Loki den gud van de undöägende. In vöäle populäre media wördt når Loki verweysen.
 
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Germaanse Mythologie]]
+[[Kategorie:Germaanse mythologie]]
