*Empty MediaWiki Message*

--- a/Kamala_Harris.mw
+++ b/Kamala_Harris.mw
@@ -1,4 +1,4 @@
-[[File:Kamala Harris official photo (cropped2).jpg|thumb|200px|Kamala Harris]]
+[[File:Kamala Harris Vice Presidential Portrait.jpg|thumb|200px|Kamala Harris]]
 '''Kamala Devi Harris''' is van den [[20. oktober]] [[1964]]. Seyd [[2017]] is see senatrice vöär den amerikaansken ståt [[Kalifornie]]. Harris hevt ne upleiding as advokåte. In de Amerikaanske presidentsverkesingen van 2020 steyt see kandidåte vöär et vicepresidentskap.
 
 Harris kümt uut [[Oakland, Kalifornie]] en studeerden af an de Universiteiten van Howard en Kalifornia, by den lätsten an de Wetskole van Hastings. Öäre loupbane begün as advokåte in [[Alameda County]], wårnå see antrökken wör voor et distriktsadvokåtskap en later et stadsadvokåtskap van [[San Francisko]]. In [[2003]] wör see benöömd as distriktsadvokåt van San Fransisko. See wör eköäsen töt Advokåt-Generaal van Kalifornië in 2010 en herköäsen in 2014.
