--- a/Lieste_van_presidenten_van_de_Vereanegde_Stoaten.mw
+++ b/Lieste_van_presidenten_van_de_Vereanegde_Stoaten.mw
@@ -1,6 +1,6 @@
-[[Bestaand:Five Presidents Oval Office.jpg|thumb|350px|De nog leavende voormalige presidenten [[George H. W. Bush]], [[Barack Obama]], [[George W. Bush]], [[Bill Clinton]] & [[Jimmy Carter]] ]]
+[[Bestaand:Five Presidents Oval Office.jpg|thumb|350px|De in 2009 nog leavende voormalige presidenten [[George H. W. Bush]], [[Barack Obama]], [[George W. Bush]], [[Bill Clinton]] & [[Jimmy Carter]] ]]
 
-Hieronder steet ne chronologiese '''lieste van [[president]]en van de [[Verienigde Staoten van Amerika|Vereanigde Stoaten van Amerika]] en eure [[vicepresident]]en.
+Hieronder steet ne chronologiese '''lieste van [[president]]en van de [[Verienigde Staoten van Amerika|Vereanigde Stoaten van Amerika]]''' en eure [[vicepresident]]en.
 
 == Presidenten ==
 
