--- a/Roet_(tiedschrift).mw
+++ b/Roet_(tiedschrift).mw
@@ -8,9 +8,9 @@ In ''Roet'' stiet veural Drèents- en Nederlaandstalig wark. Vake viej d'r ok bi
 ==Geschiedenis==
 De studenten Nederlaands Martin Koster en [[Ton Kolkman]], die al ervaring hadden as redacteurs van 't Nedersaksische tiedschrift ''[[De Pennevogel]]'', hebt ''Roet'' op-ezet um een stee te bieden veur Drèentstalige literetuur die naor heur mening niet goed terechte kun in 't treditionelere blad [[Oeze Volk / Maandewark|''Oeze Volk'']]. Koster schreef oaver 't opzetten van ''Roet'':
 
-:''De anleidende woorden bint espreuken in café De Slingerij an de Aweg. [...] Wij (een man of zeuven, achte) die oenze moederspraok niet vergeten wolden [...]
-:'' 'Der zul een literair tiedschrift in 't Drèents komen mutten', zee ik tegen Anton, 'Oeze Volk, dat ken ik nou wel.'
-:'' 'Dan muw op stee an de slag', zee Anton mit een voortvarendheid die mij van hum hogelijk verbaosde. En hij gung verdan: 'kom mit naor mien huus, dan begunne wij votdalijk.'
+:''De anleidende woorden bint espreuken in café De Slingerij an de Aweg. [...] Wij (een man of zeuven, achte) die oenze moederspraok niet vergeten wolden [...]''
+:'' 'Der zul een literair tiedschrift in 't Drèents komen mutten', zee ik tegen Anton, 'Oeze Volk, dat ken ik nou wel.' ''
+:'' 'Dan muw op stee an de slag', zee Anton mit een voortvarendheid die mij van hum hogelijk verbaosde. En hij gung verdan: 'kom mit naor mien huus, dan begunne wij votdalijk.' ''
 :''Die naomiddag, aovend en nacht weur de eerste Roet, 't tiedschrift daor Drenthe nooit op ewacht hef, bij menare bedacht. Inclusief de name (ik bin gek op 't bedèenken van namen) en de VVV (de geachte redactieleden Vosbargen, Vlintenhouwer, Voestbiel).''<ref>Martin Koster oaver zien tied as student an 't Nedersaksisch Instituut in Grunning, en 't opzetten van ''Roet'' mit Anton Klokmann ([[Ton Kolkman]]). Uut Rouke Broersma (samenstelling en inleiding) (2003), ''Scheupers van de taol: Bloemlezing van de Drèentse Schrieverij 1837-2003'', Zuudwolde: Stichting Het Drentse Boek</ref>
 
 In 1984 verscheen de bloemlèzing ''Old zeer: vief jaor Roet'' (Het Drentse Boek, Zuudwolde), mit een aordig edetailleerd veurwoord van de oprichters Koster en Kolkman oaver de beguntied van 't tiedschrift. In 2004 verscheen (as jaorgaank 26, nommer 3 van ''Roet'') de bloemlezing ''Strèupers van de taol: 25 jaor Roet, bij 'nkander gaard deur Martin Koster''. De titel hiervan is een knipoog naor de bloemlèzing uut de Drèentse schrieveri'je ''Scheupers van de taol'', det 't jaor daorveur verschenen was.
