--- a/Gouda.mw
+++ b/Gouda.mw
@@ -53,6 +53,7 @@ De [[Grote of Sint-Janskarke (Gouda)|Sint-Jan]] is de langste [[kruuskarke]] van
 
 == Uutgoande verwiezingen ==
 * [http://www.gouda.nl/ Webstae van de gemeente Gouda]
+* [https://www.oud-gouda.nl/ A collection of old pictures and drawings of Gouda. (A journey through the past)]
 * [http://www.goudanet.nl/ Toogangspoorte tot Cultuur Histories Gouda]; samen-esteld deur inwonners uut de stad under redaktie van de Openboare [[Bibliotheek]] Gouda, et Streekarcheef Midden-Hollaand en MuseumGoudA]
 
 == Galleri-je ==
